terraform/modules/nat/sec_grp.tf
resource "aws_security_group" "pam_fitness_nat_sg" {
  name        = "nat_sg"
  description = "Allow ssh, internet inbound traffic and all outbound taffic"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name  = "pam_fitness_nat_sg"
    Owner = "pam_fitness"
  }
}
